[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "pybind11>=2.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "unitree-lidar-sdk"
version = "2.0.9"
description = "Python bindings for Unitree Lidar SDK2"
readme = "unitree_lidar_sdk/README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
authors = [
  { name = "Unitree Robotics" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: POSIX :: Linux",
  "Topic :: Software Development :: Libraries",
]

[tool.setuptools]
package-dir = {"" = "unitree_lidar_sdk/python"}
packages = ["unitree_lidar_sdk"]
include-package-data = true

[tool.setuptools.package-data]
unitree_lidar_sdk = ["py.typed"]
